--- a/P009158.opf/meta.yml
+++ b/P009158.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009158
+id: P009158
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W2CZ8064
   title: ལམ་རིམ་ནས་བྱུང་བའི་ཆུང་འབྲིང་གི་དམིགས་རྣམ་རྐང་གྲངས་ཙམ་དུ་སྡེབས་པའི་ཚིགས་བཅད་བརྒྱད་པ་
-  volume: ''
   author: ''
+  volumes: {}
