--- a/P009158.opf/meta.yml
+++ b/P009158.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W2CZ8064
   title: ལམ་རིམ་ནས་བྱུང་བའི་ཆུང་འབྲིང་གི་དམིགས་རྣམ་རྐང་གྲངས་ཙམ་དུ་སྡེབས་པའི་ཚིགས་བཅད་བརྒྱད་པ་
   author: ''
-  volumes: {}
+  volumes:
+    e61ca13c133d44c1abd4a0744120b386:
+      image_group_id: I1PD96638
+      title: ''
+      volume_number: 1
+      total_pages: 6
