--- a/P009158.opf/layers/v001/Pagination.yml
+++ b/P009158.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 6a18ac154e474f5f9ef9b827873a52e5
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   ed93abd2627745089ff211b040fadaef:
